# tainiex-atlas

./: .dockerignore  .env.example  .gitignore  .prettierrc  AGENT.md  AGENTS.md  Dockerfile  FRONTEND_MIGRATION_GUIDE.md  README.md  check_invite_code.ts  eslint.config.mjs  nest-cli.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-error-details.txt  test-results.txt  tsconfig.base.json  tsconfig.json  verify_chat_history.ts
.github/: ENV_SECRETS_TEMPLATE.md  README.md
.husky/: pre-commit  pre-push
shared-atlas-rust/: Cargo.toml
shared-atlas-rust/src/: lib.rs
shared-atlas-rust/src/dto/: get_messages_dto.rs  get_signed_url_query_dto.rs  login_dto.rs  mod.rs  refresh_token_dto.rs  storage_module.rs  upload_file_query_dto.rs
shared-atlas-rust/src/interfaces/: activity_status.rs  add_message_dto.rs  block_type.rs  chat_error_payload.rs  chat_message_response.rs  chat_role.rs  chat_session_response.rs  chat_stream_event.rs  client_to_server_events.rs  create_block_dto.rs  create_note_dto.rs  cursor_update_payload.rs  get_messages_response.rs  iblock.rs  ichat_message.rs  ichat_session.rs  icollaborator.rs  ifile_upload_response.rs  iuser.rs  ivector_store_record.rs  mobile_auth_response.rs  mod.rs  note_join_payload.rs  note_leave_payload.rs  note_with_blocks_response.rs  presence_join_payload.rs  presence_leave_payload.rs  search_result_dto.rs  server_to_client_events.rs  web_socket_error_code.rs  ws_error_response.rs  ws_message_ack_payload.rs  ws_token_refreshed_payload.rs  yjs_sync_payload.rs  yjs_update_payload.rs
src/: main.ts  (+3 more)
(+462 files in other folders)
