[package]
name = "shared-atlas-rust"
version = "0.0.32-jxyho"
edition = "2021"
description = "Generated Rust models for Tainiex Atlas"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[lib]
path = "src/lib.rs"
